# QCodeEditor

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt
example/include/: MainWindow.hpp
src/internal/: QSyntaxStyle.cpp
